...
            android:layout_height="8dp"/>


                <!-- EditText field for the subject -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/subjectLyt"
            style="@style/MyTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/new_reu_v1"
            android:textColorHint="@color/text_input_box_stroke"
            app:hintTextColor="#FFAB40"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black_opacity_60"
                android:textStyle="bold"
                android:ems="10"
                android:hint="Sujet ? :"
...
            android:textSize="16sp"
            android:elevation="12dp"
            android:text="Où ? :    " />


        <Spinner
            android:id="@+id/new_reu_spinner_place"
            android:theme="@style/mySpinnerItemStyle"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:spinnerMode="dropdown"
            android:paddingStart="8dp"
            android:entries="@array/Rooms"
...
            android:textSize="16sp"
            android:elevation="12dp"
            android:text="Avec ? :" />


        <Button
            android:id="@+id/new_reu_add_people_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_below="@+id/whith"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="Ajouter un participant" />

        <ImageView
            android:id="@+id/new_reu_remove_people_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:paddingLeft="8dp"
...
            android:layout_marginEnd="8dp"
            android:layout_below="@+id/peopleLyt"
            android:layout_height="8dp"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/new_reu_add_reu_button"
            style="@style/Widget.MaterialComponents.Button"
            android:theme="@style/MyMaterialButtonStyle"
            android:backgroundTint="@color/mtrl_btn_bg_color_selector"
            android:layout_width="wrap_content"
            android:enabled="false"
            android:layout_height="50dp"
...
            android:layout_below="@+id/new_reu_v2"
            android:layout_alignRight="@+id/new_reu_v1"
            android:textColor="#fff"
            android:textSize="22sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:text="AJOUTER" />


        <Button
            android:id="@+id/new_reu_cancel_reu_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
...
