<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/fragment_root"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Adresse email:"
            android:textSize="18sp"
            android:textColor="#000"
            android:id="@+id/heading"/>


        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/heading"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:hint="exemple: nom@lamzone.com"
            android:textColor="#000" />

        <TextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input"
            android:layout_marginTop="12dp"
            android:text=":error!:"
            android:textColor="#FF0000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OK"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:visibility="gone"
            android:textSize="18sp"
            android:textColor="#33bbff"
            android:id="@+id/action_ok"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CANCEL"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="20dp"
            android:textSize="18sp"
            android:textColor="#33bbff"
            android:id="@+id/action_cancel"/>

    </RelativeLayout>
</RelativeLayout>
