...
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_gravity="top"
                android:baselineAligned="false"
                android:padding="4dp"
                android:id="@+id/relativeLayout">

                <TextView
                    android:id="@+id/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
...
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="Type de filtrage:" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/sb"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/filtertype"
                    android:layout_marginTop="16dp"
                    android:max="3"
                    android:progressTint="#001E468A"
...
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="Choix de la date:" />

                <com.github.florent37.singledateandtimepicker.SingleDateAndTimePicker
                    android:id="@+id/single_day_picker"
                    android:layout_width="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginTop="12dp"
                    android:layout_height="100dp"
                    android:layout_below="@+id/date"
...
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="Choix du lieu:" />

                <Spinner
                    android:id="@+id/spinner_room"
                    android:theme="@style/mySpinnerItemStyle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:spinnerMode="dropdown"
                    android:entries="@array/Rooms"
                    android:layout_marginRight="8dp"
...
